--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!-- Custom font 적용 -->
     <style name="customTextViewFontStyle" parent="@android:style/Widget.DeviceDefault.TextView">
         <item name="android:fontFamily">@font/meet_me</item>
@@ -21,5 +20,23 @@
     <style name="customCheckboxFontStyle" parent="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox">
         <item name="android:fontFamily">@font/meet_me</item>
     </style>
+
+    <!-- 로그인 회원가입 TextField 스타일 지정 -->
+    <style name="customMaterialTextField" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="hintTextColor">@color/primary_color</item>
+        <item name="boxStrokeColor">@color/primary_color</item>
+        <item name="helperTextTextColor">@color/primary_color</item>
+    </style>
+
+    <!-- 버튼 정의 스타일 지정 -->
+    <style name="customMaterialButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/primary_color</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/meet_me</item>
+        <item name="cornerRadius">5dp</item>
+        <item name="strokeWidth">0dp</item>
+    </style>
+
 
 </resources>
