Add : 로그인 기능 구현

--- a/android/app/src/main/res/layout/activity_auth.xml
+++ b/android/app/src/main/res/layout/activity_auth.xml
@@ -6,6 +6,11 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.auth.AuthActivity">
+
+    <FrameLayout
+        android:id="@+id/fragment_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
