--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -38,5 +38,9 @@
         <item name="strokeWidth">0dp</item>
     </style>
 
+    <style name="BottomNavigation" parent="Widget.MaterialComponents.BottomNavigationView.Colored">
+        <item name="android:background">@color/primary_color</item>
+    </style>
+
 
 </resources>
