--- a/android/app/src/main/res/menu/bottom_nav.xml
+++ b/android/app/src/main/res/menu/bottom_nav.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/navigation_page_2"
         android:enabled="true"
-        android:title="Order"/>
+        android:title="List"/>
 <!--        android:icon="@drawable/shopping_list"/>-->
     <item
         android:id="@+id/navigation_page_3"
