Add : BottomNavigationView 이동 구현

--- a/android/app/src/main/res/layout/activity_auth.xml
+++ b/android/app/src/main/res/layout/activity_auth.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.auth.AuthActivity">
 
     <FrameLayout
-        android:id="@+id/fragment_layout"
+        android:id="@+id/auth_fragment_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
