--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.MainActivity">
 
     <FrameLayout
-        android:id="@+id/frame_layout_main"
+        android:id="@+id/main_fragment_layout"
         android:layout_above="@id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
@@ -19,6 +19,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/BottomNavigation"
-        app:menu="@menu/bottom_nav" />
-
+        app:menu="@menu/bottom_nav"
+        app:itemIconTint="@color/selector_nav_item"
+        app:itemTextColor="@color/selector_nav_item"
+        app:itemIconSize="28dp"
+        app:itemTextAppearanceActive="@style/BottomNavTextLargeActive"
+        app:itemTextAppearanceInactive="@style/BottomNavTextLargeInactive" />
 </RelativeLayout>
