--- a/android/app/src/main/res/menu/bottom_nav.xml
+++ b/android/app/src/main/res/menu/bottom_nav.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_page_1"
+        android:id="@+id/home_page"
         android:enabled="true"
-        android:title="Home"/>
-<!--        android:icon="@drawable/home"-->
+        android:title="@string/home"
+        android:icon="@drawable/home" />
+
     <item
-        android:id="@+id/navigation_page_2"
+        android:id="@+id/list_page"
         android:enabled="true"
-        android:title="List"/>
-<!--        android:icon="@drawable/shopping_list"/>-->
+        android:title="@string/list"
+        android:icon="@drawable/icecream" />
+
     <item
-        android:id="@+id/navigation_page_3"
+        android:id="@+id/my_page"
         android:enabled="true"
-        android:title="Mypage"/>
-<!--        android:icon="@drawable/user"/>-->
+        android:title="@string/my_page"
+        android:icon="@drawable/mypage" />
 </menu>
