--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
 
     <color name="nav_selected_color">#A4133C</color>
     <color name="nav_default_color">#FECCD5</color>
+
+    <color name="divider_color">#D3D3D3</color>
 </resources>
