--- a/android/app/src/main/res/layout/fragment_ice_cream_list.xml
+++ b/android/app/src/main/res/layout/fragment_ice_cream_list.xml
@@ -57,7 +57,7 @@
         android:id="@+id/option_area"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabLayout">
