--- a/android/app/src/main/res/layout/fragment_ice_cream_list.xml
+++ b/android/app/src/main/res/layout/fragment_ice_cream_list.xml
@@ -72,6 +72,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tabLayout">
 
             <ImageButton
+                android:id="@+id/filter_button"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:scaleType="fitCenter"
