--- a/android/app/src/main/res/layout/fragment_ice_cream_list.xml
+++ b/android/app/src/main/res/layout/fragment_ice_cream_list.xml
@@ -101,6 +101,7 @@
         app:layout_constraintTop_toBottomOf="@+id/option_area" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/ice_cream_shopping_cart_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/shopping_cart"
