--- a/android/app/src/main/res/color/button_stroke_color.xml
+++ b/android/app/src/main/res/color/button_stroke_color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 눌림 상태 -->
-    <item android:state_checked="true" android:color="@color/primary_color" />
+    <item android:state_checked="true" android:color="@color/title_color" />
     <item android:state_pressed="true" android:color="@color/hint_color" />
     <item android:color="@color/hint_color" />
 </selector>
